# demo-internal-knowledge-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_allow_duplicate_document_checksums.py
backend/app/: __init__.py  audit.py  config.py  db.py  embeddings.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: auth.py  chat.py  documents.py  threads.py
backend/app/auth/: __init__.py  dependencies.py  passwords.py  tokens.py
backend/app/graph/: __init__.py  state.py  workflow.py
backend/app/ingestion/: __init__.py  __main__.py  worker.py
backend/app/policies/: __init__.py  documents.py  salaries.py
backend/app/retrieval/: __init__.py  ingest.py  search.py
backend/app/tools/: __init__.py  salary.py
backend/tests/: test_auth.py  test_auth_api.py  test_chat_api.py  test_claude_runtime.py  test_documents_api.py  test_embeddings.py  test_graph.py  test_ingest.py  test_ingestion_worker.py  test_migrations.py  test_models.py  test_policies.py  test_retrieval.py  test_salary_tool.py  test_seed.py
docs/: design.html  index.html
documents/: attendance-leave-policy.md  employee-handbook.md  engineering-guide.md  hr-compensation-policy.md  incident-response-oncall.md  information-security-policy.md  onboarding-guide.md  performance-review-policy.md  procurement-vendor-policy.md  release-change-management.md  remote-work-guide.md  travel-expense-policy.md
frontend/: Dockerfile  index.html  nginx.conf  (+3 more)
(+39 files in other folders)
