[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-internal-knowledge-agent"
version = "0.1.0"
description = "Permission-aware internal knowledge agent demo"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "langchain>=1,<2",
  "langchain-openai>=1,<2",
  "langgraph>=1,<2",
  "langgraph-checkpoint-postgres>=2,<4",
  "pgvector>=0.3,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "PyJWT>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "tiktoken>=0.8,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

